# thunderstore-ui

./: .dockerignore  .editorconfig  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .stylelintrc  AGENTS.md  Dockerfile  Dockerfile.dev  ManualUXTests.md  README.md  babel.config.js  docker-compose.build.yml  docker-compose.development.yml  docker-compose.remix.build.yml  docker-compose.remix.development.yml  eslint.config.mjs  package-lock.json  package.json  plopfile.mjs  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: auto-merge-dependabot.yml  fontawesome-optional.yml  static-analysis.yml  storybook-chromatic.yml  test.yml  thunderstore-ui-pre-release.yml  visual-diff.yml  (+2 more)
build-secrets/: README.md
docs/: error-handling-improvement-plan.md  error-handling-plan.md  error-handling.md  loader-client-loader-audit.md  loader-error-handling-plan.md  nimbus-error-boundary-route-audit.md  promise-rejection-handling-audit.md  staged-error-handling-audit.md  staged-error-handling-commit-plan.md  suspense-await-loader-audit.md  user-facing-error-review-findings.md
nextjs/: .env.development  .gitignore  README.md  package.json  tsconfig.json
stories/: Button.tsx  Header.stories.tsx  Header.tsx  Page.tsx
thunderstore-components/: package.json  tsconfig.json
tools/: README.md
tools/test-ci/: pyproject.toml  run_ci_script.py
tools/visual-diff-ci/: pyproject.toml  run_ci_script.py
types/: chakra-ui-markdown-renderer.d.ts
(+904 files in other folders)
