[tool.poetry]
name = "thunderstore-ui"
version = "0.1.0"
description = ""
authors = ["Oksamies <asko.soisalo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
