[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["Mythic <mythicmaniac@gmail.com>", "Oksamies <asko.soisalo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
